fix the alignment of picture grid

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin: 0px;
     padding: 0px;
     font-size: 4vw;
+    color: #ff604e;
 }
 html {
     height:100%;
@@ -38,12 +39,16 @@ body {
 }
 .text-problem-item {
     width:100%;
+    color: #ff604e;
     font-family: "-apple-system", "Helvetica Neue", "Roboto", "Segoe UI", "Arial", "PingFang SC", "Source Han Sans CN", "Hiragino Sans GB", "Dengxian", "Microsoft JhengHei", "Microsoft YaHei", sans-serif;
     font-size:0.8em;
 }
 .picture-problem-item {
     width:50%;
+    color: #ff604e;
     display: inline;
+    border-radius:0 !important;
+    margin-bottom:0 !important;
 }
 .align-right-bar {
   align-items: right;
@@ -167,13 +172,15 @@ body {
 
 .problem-text{
   font-size: 1.2em;
+    color: #ff604e;
   font-family: "-apple-system", "Helvetica Neue", "Roboto", "Segoe UI", "Arial", "PingFang SC", "Source Han Sans CN", "Hiragino Sans GB", "Dengxian", "Microsoft JhengHei", "Microsoft YaHei", sans-serif;
+  text-align: left;
 }
 
 .extra-pic{
   max-width:75%;
   max-height: 20vh;
-
+  text-align: center;
 }
 
 #logo99{
@@ -213,3 +220,11 @@ body {
   flex-direction:column;
   padding-bottom: calc(10vh + 10px);
 }
+.final-review-text{
+  text-align: left;
+  color: #ff604e;
+}
+.final-review-text big{
+  font-size: 2em;
+}
+
